# chess

./: .gitignore  CMakeLists.txt
include/: game.hpp  renderer.hpp  square.hpp
include/pieces/: pawn.hpp  piece.hpp
src/: game.cpp  main.cpp  renderer.cpp  square.cpp
src/pieces/: pawn.cpp
